--- a/visualizer.html
+++ b/visualizer.html
@@ -6,9 +6,17 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .pui-components-http-request-result-visualize-frame-index-visualize-frame{
+      width: 90vw;
+      height: 90vh;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-<iframe class="pui-components-http-request-result-visualize-frame-index-visualize-frame" id="b8d76366-f724-4ac4-820b-62d3268dd9e3" name="b8d76366-f724-4ac4-820b-62d3268dd9e3" allow="fullscreen 'none'; payment 'none';" sandbox="allow-forms allow-scripts" srcdoc="
+
+<iframe class="pui-components-http-request-result-visualize-frame-index-visualize-frame" id="b8d76366-f724-4ac4-820b-62d3268dd9e3" name="b8d76366-f724-4ac4-820b-62d3268dd9e3" allow="fullscreen 'none'; payment 'none';" sandbox="allow-same-origin allow-forms allow-scripts" srcdoc="
           <html>
             <head>
               <meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;default-src 'none'; script-src http: https: 'unsafe-inline'; style-src http: https: 'unsafe-inline' ; img-src http: https: data:; font-src http: https:; connect-src http: https:; media-src http: https:; object-src 'none'; child-src 'none'; frame-src 'none'&quot;>
@@ -24,20 +32,26 @@
                 const dataMap = {};
                 window.pm = {};
                 window.pm['getData'] = function(cb) {
+                console.log(dataMap[id],'dataMap[id]')
                   if(typeof cb === 'function' &amp;&amp; dataMap[id]) {
                     const { error, data } = dataMap[id]
+                    console.log(data,'?')
                     cb(error, data)
                   }
                 };
-
+                console.log('1')
                 window.addEventListener('message', (event) => {
+                console.log(event.data)
+                                                  console.log(event.data.id , id)
                   if(!(event &amp;&amp; event.data &amp;&amp; event.data.id === id)) return;
                   if(event.data.namespace === namespace){
+                  console.log(event.data.data)
                     handleMessage(event.data.data)
                   }
                 });
 
                 function handleMessage(data) {
+                console.log(data)
                   if(data) {
                     dataMap[id] = data
                   }
@@ -126,15 +140,51 @@
 
     // Access the data passed to pm.visualizer.set() from the JavaScript
     // code of the Visualizer template
-    pm.getData(function (err, value) {
+
+
+    setTimeout(()=>{
+        pm.getData(function (err, value) {
+    console.log(value,'ssss')
         myChart.data.datasets[0].data = value.data;
         myChart.data.labels = value.labels;
         myChart.update();
     });
+    },1000)
 
 </script>
             </body>
           </html>
         "></iframe>
+
+<script>
+  setTimeout(()=>{
+    const iframe = document.querySelector('.pui-components-http-request-result-visualize-frame-index-visualize-frame')
+    // console.log(iframe,'iframe')
+    iframe.contentWindow.postMessage({
+      type: 'getVisualizerContent',
+      namespace:"visualizerFrame",
+      id:"b8d76366-f724-4ac4-820b-62d3268dd9e3",
+      data:{
+        error:null,
+        data:{
+          "labels": [
+            "IO",
+            "IS",
+            "DO",
+            "BI",
+            "IL"
+          ],
+          "data": [
+            329,
+            700,
+            478,
+            244,
+            697
+          ]
+        }
+      }
+    }, '*')
+  },500)
+</script>
 </body>
 </html>
